lagt til metodene vi trenger og skrevet hva vi må fylle dem med i morgen